2007-02-06  Ethan Merritt  <merritt@u.washington.edu>

	* src/misc.c src/graphics.c: Update comments to match code handling
	colorspec with "rgb variable".

	* src/save.c (save_pm3dcolor): Save/show "rgb variable" when needed.

	* src/gadgets.h src/tables.c src/tables.h src/save.c (save_set_all) 
	src/graphics.c (do_plot do_key_sample) src/show.c (show_keytitle)
	src/set.c (set_key) : Add a textcolor field to legend_key structure.
	The requested color is applied to the key title and to the plot titles
	in the key.  Setting the color to "rgb variable" causes plot titles to
	match the linetype color of the corresponding plot (as in version 3.7).

	* demo/colorscheme.dem : New demo

	* docs/gnuplot.doc: Update section on "set key".

2007-02-05  Per Persson <persquare@mac.com>

	* configure.in: Testing libreadline for remove_history presence 
	instead of readline to avoid incompatible libedit wrapper.
	
2007-02-05  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (finish_filled_curve):
	Fill between curves is created by a sequence of quadrangles.
	Unfortunately there is a 1-pixel overlap of adjacent quadrangles.
	This causes a regular artifact (vertical stripes) if the fill style is
	transparent solid. This patch tests for the special case and reduces
	the width of each quadrangle by one pixel so that there is no overlap.

2007-02-04  Ethan Merritt  <merritt@u.washington.edu>

	* src/util3d.c (draw3d_line_unconditional):  Clip line segment.
	Fixes, or at least ameliorates, a problem with (unsigned int) terminal
	coordinates going negative for terminals using the code in bitmap.c
	Some day I hope we can replace all terminal coordinates with signed values
	Clipping/interpolation with unsigned coords doesn't work, and causes
	problems all over the place.
	Bug #1649887

2007-02-02  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in (PKG_CHECK_MODULES):
	* m4/pkg.m4:
	Cleanup configure.in by defining PKG_CHECK_MODULES_NOFAIL in pkg.m4