@@ -1,3 +1,9 @@
+2007-02-07  Ethan Merritt  <merritt@u.washington.edu>
+
+	* src/command.c (test_palette_subcommand): Do not use deprecated
+	syntax in internally-generated commands.
+	Bug #1654570
+
 2007-02-06  Ethan Merritt  <merritt@u.washington.edu>
 
 	* src/misc.c src/graphics.c: Update comments to match code handling
